[tool.poetry]
name = "data-visulization"
version = "0.1.0"
description = ""
authors = ["Yonatan Palagashvili <yonimotek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.3.3"
numpy = "^1.19.4"
seaborn = "^0.11.0"
jupyterlab = "^2.2.9"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
